# py-sc

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agent/: PLANS.md  RUN_LOG.md  run_logged.sh
.agent/execplans/: chapter-06-direct-methods.md  chapters-07-12.md
chapters/ch02_interpolation/: README.md  compare_interpolation.py  cubic_spline_interpolation.py  piecewise_interpolation.py  polynomial_interpolation.py  references.md
chapters/ch02_interpolation/notebooks/: 01_interpolation_overview.ipynb  02_polynomial_interpolation.ipynb  (+3 more)
chapters/ch03_approximation/: README.md  references.md
chapters/ch04_numerical_integration/: README.md  references.md
chapters/ch05_numerical_differentiation/: README.md  references.md
chapters/ch06_direct_linear_systems/: README.md  references.md
chapters/ch07_iterative_linear_systems/: README.md
chapters/ch08_nonlinear_roots/: README.md
chapters/ch09_nonlinear_systems/: README.md
chapters/ch10_eigenvalue_methods/: README.md
chapters/ch11_ode_initial_value/: README.md
chapters/ch12_pde_methods/: README.md
docs/: README.md
references/: README.md
src/py_sc/: __init__.py  approximation.py  differentiation.py  direct_linear.py  eigenvalues.py  integration.py  interpolation.py  iterative_linear.py  nonlinear_roots.py  nonlinear_systems.py  ode_ivp.py  pde.py
tests/: test_approximation.py  test_differentiation.py  test_direct_linear.py  test_eigenvalues.py  test_integration.py  test_interpolation.py  test_iterative_linear.py  test_nonlinear_roots.py  test_nonlinear_systems.py  test_ode_ivp.py  test_pde.py
(+67 files in other folders)
