[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-sc"
version = "0.1.0"
description = "Python numerical computing notes and chapter-based code examples."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "recruitL" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.0",
  "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
